--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ ul{list-style: none;}
 .centent3 span{line-height: 28px;}
 .centent3 .teb_centen{width: 100%;height: 100%; margin: 20px;border:1px solid #ccc;position: relative;cursor: pointer;overflow: hidden;}
 .teb_centen p {display: none; position: absolute; top:0;left: 0;line-height: 188px;font-size: 36px; color: #fff;width: 100%;height: 100%; background: #000;background: rgba(160, 165, 165, 0.8);}
-#demo{position: fixed;top: 0;left:0;width: 100%;height: 100%; background: #000;z-index: 9999;display: none;}
+.demo{position: fixed;top: 0;left:0;width: 100%;height: 100%; background: #000;z-index: 9999;display: none;}
 #demo.curshow{display: block;}
 #demo p {font-size: 24px;color: #fff;margin: 20px; text-align: right;position: absolute;top: 20px; z-index: 9999;right: 20px;}
 .nav-tabs>li.active>a{border: none;}
